<resources>
    <string name="app_name">TD1</string>
    <string name="validateButton">VALIDER</string>
    <string name="login_mdp">Mot de passe</string>
    <string name="login_id">Identifiant</string>
    <string name="login_tittle">Connexion</string>
    <string name="cycle_title">Cycle de vie</string>
    <string name="cycle_netat">"L'état de cette activité est : "</string>
    <string name="cycle_etatview"> etat</string>
    <string name="save_title">Sauvegarde</string>
    <string name="save_name">Nom</string>
    <string name="save_fisrtname">Prénom</string>
    <string name="save_titleDate">Date de naissance</string>
    <string name="save_titlePrenom">Prénom</string>
    <string name="save_titleName">Nom</string>
    <string name="save_button">SAVE</string>
    <string name="save_lecture">LECTURE</string>
    <string name="permission_title">Accès aux informations Android</string>
    <string name="contact_title">"Contacts de Marilys "</string>
    <string name="user_name">User Name</string>
    <string name="user_address">Adresse User</string>
    <string name="user_mail">Mail User</string>
    <string name="ble_title">Lancer le scan</string>
    <string name="bleFailedetext">Error</string>
    <string name="device_mac">Mac address</string>
    <string name="device.rssi">-100</string>
    <string name="device_name">Name</string>
    <string name="device_statut">statut</string>
    <string name="serviceName">Name</string>
    <string name="id_imput">Identifiant</string>
    <string name="title_name">Nom du device :</string>
    <string name="statut_title">Statut du device :</string>
    <string name="ipCaracBle">Characteristic</string>
    <string name="characteristicUUID_title">UUID :</string>
    <string name="property_title">Property :</string>
    <string name="Name_characteristic">Name</string>
    <string name="value_title">Value :</string>
    <string name="button_lecture">lecture</string>
    <string name="button_ecrire">écrire</string>
    <string name="button_notif">notifier</string>
</resources>
