<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveActivity">

    <TextView
        android:id="@+id/save_titleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_titleName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/save_name"
        app:layout_constraintStart_toStartOf="@+id/save_name" />

    <TextView
        android:id="@+id/save_titlePrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_titlePrenom"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/save_fisrtname"
        app:layout_constraintStart_toStartOf="@+id/save_fisrtname" />

    <TextView
        android:id="@+id/save_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/save_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/save_name"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_title" />

    <EditText
        android:id="@+id/save_fisrtname"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/save_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/save_name"
        app:layout_constraintTop_toBottomOf="@+id/save_name" />

    <TextView
        android:id="@+id/save_titleDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_titleDate"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/save_date"
        app:layout_constraintStart_toStartOf="@+id/save_fisrtname"
        app:layout_constraintTop_toTopOf="@+id/save_date" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/save_button"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_titleDate" />

    <Button
        android:id="@+id/save_lecture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/save_lecture"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_date" />

    <Button
        android:id="@+id/save_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="48dp"
        android:text="../../...."
        app:layout_constraintEnd_toEndOf="@+id/save_fisrtname"
        app:layout_constraintStart_toEndOf="@+id/save_titleDate"
        app:layout_constraintTop_toBottomOf="@+id/save_fisrtname" />

</androidx.constraintlayout.widget.ConstraintLayout>